# llm-recipes

./: .gitignore  0_shot_promp_non_instruct.txt  3_shot_promp_mistra.txt  playground.ipynb  playground2.ipynb  playground3.ipynb  playground4.ipynb  pyproject.toml  sample_prompt.txt
configs/: datasets.py  distillation.py
data/: data_utils.py
datasets-m/: generator.py
datasets-m/loader/: squad.py
datasets-m/processed/pubmed_qa/test/: state.json
datasets/hf/Mistral-7B-Instruct-v0.2-squad/train/: cache-1abe45b7fad130c5.arrow  cache-1ee45177e34d9cce.arrow  cache-2939d8bf87919daf.arrow  cache-2e0bdd1af6508a2c.arrow  cache-2f23ab19af7fa0cd.arrow  cache-3b84210e75e54433.arrow  cache-3e2252afb1b546dd.arrow  cache-4262847732762f6e.arrow  cache-4a8eca828a2b4355.arrow  cache-5df8eb8996fda6e6.arrow  cache-9ecbb455d47f32bd.arrow  cache-a4219e0f55e5148b.arrow  cache-bc2c15c44ad81489.arrow  cache-bd42cf93db725f71.arrow  cache-cbcf3d072b2fb4d7.arrow  cache-cfaf5403cc625886.arrow  cache-d0c67832b684c1f0.arrow  cache-d224913ac7932038.arrow  cache-e59fd336da01dc87.arrow  cache-e8f7e1f8d0889bbf.arrow  state.json  (+2 more)
datasets_m/: generator.py  generator2.py
datasets_m/loader/: squad.py  squad_xrag.py
mistral-sqaud-ds/: data-00000-of-00001.arrow  state.json
models/: distillation_model.py  modeling_xgemma.py  modeling_xmistral.py  models_utils.py
oldplaygrounds/: data_loader_inspection_1.ipynb  inspecting-llm-recipe-data-1.ipynb  making_xrag_toknize_func.ipynb  model_that_understand.ipynb  prompt_creation_inspection_1.ipynb  xdata_preparation.ipynb
prompt/: prompt.py
(+29 files in other folders)
