[project]
name = "llm-recipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "fire>=0.7.1",
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "numpy>=2.0.2",
    "peft>=0.17.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
]
